--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# GitHub Pages
+# Note: Uncomment the line below if you don't want to commit the /docs folder
+# /docs
+
+# Temporary API backup during build
+api.backup
