updated project for deployment

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,8 +1,7 @@
 # Production Database Configuration
+# Heroku provides DATABASE_URL automatically
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/ecommerce_prod}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:postgres}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# No need for username/password - they're included in DATABASE_URL
 
 # JPA/Hibernate Configuration for Production
 # NOTE: Using 'update' in this deployment so Hibernate can create missing tables
