--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -58,3 +58,7 @@ spring.thymeleaf.prefix=classpath:/templates/email/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
+
+# Production database (Heroku sets DATABASE_URL)
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/william_normann_shop}
+spring.jpa.hibernate.ddl-auto=update
