--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "motion": "^12.23.26",
-    "next": "16.0.10",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "postprocessing": "^6.38.1",
     "react": "19.2.0",
