updated the whole shop part of the project.

--- a/backend/src/main/resources/application-docker.properties
+++ b/backend/src/main/resources/application-docker.properties
@@ -8,7 +8,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=${PORT:8080}
 
 # JPA/Hibernate Configuration for Production
-spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
+# Changed from 'update' to 'validate' to prevent auto-migration conflicts
+# Manual migrations should be run via SQL scripts
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:validate}
 spring.jpa.show-sql=${SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
