backend deploy adjustments

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -27,7 +27,9 @@ jwt.expiration=${JWT_EXPIRATION:3600000}
 app.frontend-url=${FRONTEND_URL:${APP_BASE_URL:https://yourdomain.com}}
 
 # Production CORS settings
-cors.allowed-origins=${ALLOWED_ORIGINS:https://yourdomain.com}
+# Set ALLOWED_ORIGINS in Heroku for strict allow-list (comma-separated).
+# If omitted, backend falls back to wildcard origin patterns in SecurityConfig.
+cors.allowed-origins=${ALLOWED_ORIGINS:}
 
 # Production logging
 logging.level.com.ecommerse=INFO
