Backend: privileged bootstrap, admin tools, and migration fixes

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -51,8 +51,11 @@ spring.mvc.contentnegotiation.media-types.json=application/json
 app.upload.public-url-prefix=/uploads
 
 # Stripe Configuration for Development
-stripe.secret.key=${STRIPE_SECRET_KEY}
-stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
+stripe.secret.key=${STRIPE_SECRET_KEY:}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET:}
+
+# Admin tools (enabled by default in dev for local testing; disable via ADMIN_TOOLS_ENABLED=false)
+admin.tools.enabled=${ADMIN_TOOLS_ENABLED:true}
 
 # Email Configuration for Development (falls back to console logging if not configured)
 spring.mail.host=${MAIL_HOST:}
