--- a/backend/src/main/resources/application-docker.properties
+++ b/backend/src/main/resources/application-docker.properties
@@ -40,6 +40,8 @@ cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:4200,http://127.0.0.1:42
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=when_authorized
 management.health.defaults.enabled=true
+# Docker doesn't configure SMTP by default; don't fail container health checks on mail.
+management.health.mail.enabled=false
 
 # Logging Configuration
 logging.level.root=${ROOT_LOG_LEVEL:WARN}
@@ -49,3 +51,6 @@ logging.level.org.springframework.boot=${BOOT_LOG_LEVEL:WARN}
 logging.level.org.springframework.security=${SECURITY_LOG_LEVEL:WARN}
 logging.level.org.hibernate=${HIBERNATE_LOG_LEVEL:WARN}
 logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+
+# Admin tools (disabled by default; enable explicitly via env var in test/staging)
+admin.tools.enabled=${ADMIN_TOOLS_ENABLED:true}
