--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -49,3 +49,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.from=${MAIL_FROM:}
+
+# Admin tools (disabled by default; enable explicitly via env var in test/staging)
+admin.tools.enabled=${ADMIN_TOOLS_ENABLED:false}
