bug fixes and added whatsapp quote system.

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -50,5 +50,13 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.from=${MAIL_FROM:}
 
+# WhatsApp Lead Delivery (Meta Cloud API)
+whatsapp.enabled=${WHATSAPP_ENABLED:false}
+whatsapp.api-base=${WHATSAPP_API_BASE:https://graph.facebook.com}
+whatsapp.api-version=${WHATSAPP_API_VERSION:v21.0}
+whatsapp.phone-number-id=${WHATSAPP_PHONE_NUMBER_ID:}
+whatsapp.access-token=${WHATSAPP_ACCESS_TOKEN:}
+whatsapp.recipient-number=${WHATSAPP_RECIPIENT_NUMBER:+971585347970}
+
 # Admin tools (disabled by default; enable explicitly via env var in test/staging)
 admin.tools.enabled=${ADMIN_TOOLS_ENABLED:false}
