--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -50,6 +50,14 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.from=${MAIL_FROM:noreply@example.com}
 
+# WhatsApp Lead Delivery (Meta Cloud API)
+whatsapp.enabled=${WHATSAPP_ENABLED:false}
+whatsapp.api-base=${WHATSAPP_API_BASE:https://graph.facebook.com}
+whatsapp.api-version=${WHATSAPP_API_VERSION:v21.0}
+whatsapp.phone-number-id=${WHATSAPP_PHONE_NUMBER_ID:}
+whatsapp.access-token=${WHATSAPP_ACCESS_TOKEN:}
+whatsapp.recipient-number=${WHATSAPP_RECIPIENT_NUMBER:+971585347970}
+
 # Thymeleaf Email Templates
 spring.thymeleaf.prefix=classpath:/templates/email/
 spring.thymeleaf.suffix=.html
