ADDED image scan tool to add products. Added images for categories, Removed unused parts categories.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -58,6 +58,11 @@ whatsapp.phone-number-id=${WHATSAPP_PHONE_NUMBER_ID:}
 whatsapp.access-token=${WHATSAPP_ACCESS_TOKEN:}
 whatsapp.recipient-number=${WHATSAPP_RECIPIENT_NUMBER:+971585347970}
 
+# OCR Configuration (Product Name/Price Prefill)
+ocr.provider=${OCR_PROVIDER:openai}
+ocr.openai.api-key=${OPENAI_API_KEY:}
+ocr.openai.model=${OCR_OPENAI_MODEL:gpt-5-mini}
+
 # Thymeleaf Email Templates
 spring.thymeleaf.prefix=classpath:/templates/email/
 spring.thymeleaf.suffix=.html
