--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -31,7 +31,7 @@ cart.reservation.cleanup-ms=300000
 app.frontend-url=${FRONTEND_URL:${APP_BASE_URL:http://localhost:4200}}
 
 # CORS settings for development
-cors.allowed-origins=${APP_BASE_URL:http://localhost:4200},http://localhost:3000
+cors.allowed-origins=${ALLOWED_ORIGINS:${FRONTEND_URL:${APP_BASE_URL:http://localhost:4200}}},http://localhost:3000
 
 # Development logging
 logging.level.org.hibernate.SQL=DEBUG
