--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,7 +24,7 @@ app.upload.public-url-prefix=/uploads
 app.frontend-url=${FRONTEND_URL:${APP_BASE_URL:http://localhost:4200}}
 
 # CORS
-cors.allowed-origins=${APP_BASE_URL:http://localhost:4200}
+cors.allowed-origins=${ALLOWED_ORIGINS:${FRONTEND_URL:${APP_BASE_URL:http://localhost:4200}}}
 
 # Common logging
 logging.level.com.ecommerse=DEBUG
