updated the ocr system to be a lot faster.

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -58,5 +58,10 @@ whatsapp.phone-number-id=${WHATSAPP_PHONE_NUMBER_ID:}
 whatsapp.access-token=${WHATSAPP_ACCESS_TOKEN:}
 whatsapp.recipient-number=${WHATSAPP_RECIPIENT_NUMBER:+971585347970}
 
+# OCR Configuration (fast default)
+ocr.provider=${OCR_PROVIDER:openai}
+ocr.openai.api-key=${OPENAI_API_KEY:}
+ocr.openai.model=${OCR_OPENAI_MODEL:gpt-5-nano}
+
 # Admin tools (disabled by default; enable explicitly via env var in test/staging)
 admin.tools.enabled=${ADMIN_TOOLS_ENABLED:false}
