--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -61,7 +61,7 @@ whatsapp.recipient-number=${WHATSAPP_RECIPIENT_NUMBER:+971585347970}
 # OCR Configuration (Product Name/Price Prefill)
 ocr.provider=${OCR_PROVIDER:openai}
 ocr.openai.api-key=${OPENAI_API_KEY:}
-ocr.openai.model=${OCR_OPENAI_MODEL:gpt-5-mini}
+ocr.openai.model=${OCR_OPENAI_MODEL:gpt-5-nano}
 
 # Thymeleaf Email Templates
 spring.thymeleaf.prefix=classpath:/templates/email/
